[package]
name = "ipconfig"
version = "0.1.9"  # Remember to also update the html_root_url in lib.rs and the documentation links here and in README.md
authors = ["Liran Ringel <liranringel@gmail.com>"]
description = "Get network adapters information and network configuration for windows."
license = "MIT/Apache-2.0"
keywords = ["ipconfig", "network", "adapter", "interface", "windows"]
repository = "https://github.com/liranringel/ipconfig"
homepage = "https://github.com/liranringel/ipconfig"
documentation = "https://docs.rs/ipconfig/0.1.9/x86_64-pc-windows-msvc/ipconfig/"
readme = "README.md"

[badges]
appveyor = { repository = "liranringel/ipconfig" }

[dependencies]
error-chain = "0.12.0"

[target.'cfg(windows)'.dependencies]
socket2 = "^0.3.8"
winapi = "^0.3.6"
widestring = "^0.4.0"
winreg = "^0.6.0"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
nix = "0.12.0"
